--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build with environment variables
         run: npm run build
@@ -44,22 +44,24 @@ jobs:
           REACT_APP_CITY_EN: ${{ secrets.REACT_APP_CITY_EN }}
           REACT_APP_GITHUB: ${{ secrets.REACT_APP_GITHUB }}
 
-      - name: Configure Pages
+      - name: Configure GitHub Pages
         uses: actions/configure-pages@v4
         with:
-          enablement: true   # ✅ 如果 Pages 未启用，自动启用
+          enablement: true   # ✅ 自动启用 Pages（若第一次部署）
 
-      - name: Upload artifact
+      - name: Upload build artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './build'
+          path: ./build       # React build 目录
 
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
     needs: build
+
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
